# card-search

./: README.md  card-search.cabal  stack.yaml
benchmarks/: Bench.hs
executables/: Main.hs
sources/Card/: Search.hs
sources/Card/Search/: Core.hs  Example.hs  Extra.hs  Types.hs
tests/: DocTest.hs
tests/Card/Search/: Test.hs
