name:                card-search
version:             0.0.0
synopsis:            TODO
description:         
 .
 TODO
 . 
 see the source of "Card.Search.Example" for an example.
 .
 transitive dependencies:
 .
 <<card-search.png>>

homepage:            http://github.com/sboosali/card-search#readme
license:             BSD3
license-file:        LICENSE
author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com
copyright:           2017 Spiros Boosalis
category:            TODO
build-type:          Simple
cabal-version:       >=1.10

-- PVP
-- https://wiki.haskell.org/Package_versioning_policy
-- "A.B is known as the major version number, and C the minor version number."

extra-source-files:
  README.md
  .gitignore
  .travis.yml
  HLint.hs
  stack.yaml

-- data-files:

--  data/

source-repository head
  type:     git
  location: https://github.com/sboosali/card-search


library
 hs-source-dirs:      sources
 default-language:    Haskell2010
 ghc-options:
  -Wall
  # disable
  -fno-warn-unticked-promoted-constructors
  # enable
  -fwarn-incomplete-uni-patterns
  -fwarn-incomplete-record-updates
  -fwarn-identities
  -fwarn-missing-fields

 default-extensions: AutoDeriveTypeable DeriveDataTypeable DeriveGeneric
                     DeriveFunctor DeriveFoldable DeriveTraversable
                     LambdaCase EmptyCase TypeOperators PostfixOperators
                     ViewPatterns BangPatterns KindSignatures
                     NamedFieldPuns RecordWildCards TupleSections
                     MultiWayIf DoAndIfThenElse EmptyDataDecls
                     MultiParamTypeClasses FlexibleContexts FlexibleInstances
                     TypeFamilies FunctionalDependencies
                     ScopedTypeVariables StandaloneDeriving

 exposed-modules:
                 Card.Search
                 Card.Search.Types
                 Card.Search.Core		 
-- other-modules:
                 Card.Search.Extra
                 Card.Search.Example

 build-depends:
               base >=4.7 && <5

             , spiros

             , deepseq
             , hashable
             , semigroups

--              , transformers
--              , mtl
--              , containers
--              , bytestring
--              , stm
--              , template-haskell

--              , lens
--              , exceptions
--              , free
--              , bifunctors
--              , profunctors
--              , either
--              , pipes
--              , formatting
--              , servant
--              , Earley
--              , split
--              , interpolatedstring-perl6
--              , wl-pprint-text
--              , text
--              , aeson
--              , unordered-containers
--              , async
--              , parallel


executable example-card-search
 hs-source-dirs:      executables
 main-is:             Main.hs

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , card-search


-- $ stack test doctest
test-suite doctest
 hs-source-dirs:      tests
 main-is:             DocTest.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , card-search
  , doctest


-- $ stack test unittest
test-suite unittest
 hs-source-dirs:      tests
 main-is:             UnitTest.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 other-modules:
  Card.Search.Test

 build-depends:
    base
  , card-search
  , hspec ==2.2.*
  , QuickCheck ==2.8.*
  -- , tasty
  -- , tasty-quickcheck


-- $ stack bench
benchmark command
 hs-source-dirs:      benchmarks
 main-is:             Bench.hs
 type:                exitcode-stdio-1.0

 default-language: Haskell2010
 ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , card-search
  , criterion
  , deepseq

